--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Unity VR Build
+name: Unity VR Android Build
 
 on:
   push:
@@ -25,14 +25,15 @@ jobs:
       - name: Ensure build folder exists
         run: mkdir -p Builds/Android
 
-      # Step 3: Setup Unity (Personal License using secrets)
-      - name: Setup Unity
-        uses: game-ci/unity-builder@v3
-        with:
-          unityVersion: 2022.3.51f1
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          personal: true
-          unityLicense: ${{ secrets.UNITY_LICENSE }}
+      # Step 3: Activate Unity Personal License
+      - name: Activate Unity Personal License
+        run: |
+          # Decode base64-encoded .ulf license stored in GitHub secret
+          echo "${{ secrets.UNITY_LICENSE }}" | base64 --decode > unity.ulf
+          
+          # Activate Unity headlessly using the license file
+          /opt/unity/Editor/Unity \
+            -quit -batchmode -manualLicense unity.ulf
 
       # Step 4: Run the Unity build script
       - name: Build Project
