--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           CI: true
         with:
+          allowDirtyBuild: true
           targetPlatform: Android
           buildMethod: BuildScript.Execute
           buildsPath: Builds/Android
