--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository normally
+      # Step 1: Checkout repository in detached HEAD
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           lfs: true
+      - name: Checkout detached HEAD
+        run: |
+          git fetch --depth=1
+          git checkout --detach
 
-      # Step 2: Cache Unity Library folder (limited to Android builds)
+      # Step 2: Cache Unity Library folder (Android only)
       - name: Cache Unity Library
         uses: actions/cache@v3
         with:
@@ -32,7 +36,7 @@ jobs:
           key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: Library-Android-
 
-      # Step 3: Cache Gradle dependencies (for Android)
+      # Step 3: Cache Gradle dependencies
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
@@ -51,7 +55,7 @@ jobs:
           cp Packages/manifest.ci.json Packages/manifest.json
           cp Packages/packages-lock.ci.json Packages/packages-lock.json
           echo "CI manifests applied."
-          
+
       # Step 6: Free disk space before Unity build
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
@@ -61,8 +65,8 @@ jobs:
           dotnet: true
           haskell: true
           large-packages: true
-          docker-images: true      
-          
+          docker-images: true
+
       # Step 7: Build Unity Project
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
@@ -77,14 +81,7 @@ jobs:
           buildsPath: Builds/Android
           allowDirtyBuild: true
 
-      # Step 8: Discard changes after build (instead of detached HEAD)
-      - name: Reset repository
-        run: |
-          echo "Resetting repository to clean state..."
-          git reset --hard
-          git clean -fdx
-
-      # Step 9: Upload build artifacts (APK will be here)
+      # Step 8: Upload build artifacts
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
