--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,72 +2,52 @@ name: Unity VR Android Build
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
   pull_request:
     types: [opened, synchronize, reopened]
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Build Unity VR Project
+  # Job A: Prepare caches and free disk space
+  prep:
+    name: Prepare Environment
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Checkout repository in detached HEAD
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          lfs: true
-      - name: Checkout detached HEAD
-        run: |
-          git fetch --depth=1
-          git checkout --detach
-
-      # Step 2: Cache Unity Library folder (Android only)
+      - uses: actions/checkout@v4
+        with: lfs: true
       - name: Cache Unity Library
         uses: actions/cache@v3
         with:
           path: Library
           key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: Library-Android-
-
-      # Step 3: Cache Gradle dependencies
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
           path: ~/.gradle
           key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: gradle-
-
-      # Step 4: Ensure build folder exists
-      - name: Ensure build folder exists
-        run: mkdir -p Builds/Android
-
-      # Step 5: Apply CI manifests (temporary)
-      - name: Apply CI manifests
-        run: |
-          echo "Applying CI manifests temporarily..."
-          cp Packages/manifest.ci.json Packages/manifest.json
-          cp Packages/packages-lock.ci.json Packages/packages-lock.json
-          echo "CI manifests applied."
-
-      # Step 6: Free disk space before Unity build
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
           tool-cache: true
           android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: true
 
-      # Step 7: Build Unity Project
+  # Job B: Unity build
+  unity-build:
+    name: Build Unity Project
+    runs-on: ubuntu-latest
+    needs: prep
+    steps:
+      - uses: actions/checkout@v4
+        with: lfs: true
+      - name: Ensure build folder exists
+        run: mkdir -p Builds/Android
+      - name: Apply CI manifests
+        run: |
+          cp Packages/manifest.ci.json Packages/manifest.json
+          cp Packages/packages-lock.ci.json Packages/packages-lock.json
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
         env:
@@ -80,8 +60,31 @@ jobs:
           buildMethod: BuildScript.Execute
           buildsPath: Builds/Android
           allowDirtyBuild: true
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Unity-Build
+          path: Builds/Android
 
-      # Step 8: Upload Meta Quest Build
+  # Job C: Meta Quest Upload
+  meta-upload:
+    name: Upload to Meta Quest
+    runs-on: ubuntu-latest
+    needs: unity-build
+    steps:
+      - uses: actions/checkout@v4
+        with: lfs: true
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: Unity-Build
+          path: Builds/Android
+      - name: Install Meta Quest CLI
+        run: |
+          curl -sSL https://developer.oculus.com/downloads/package/ovr-platform-util/latest/linux/ovr-platform-util-linux.zip -o ovr.zip
+          unzip -q ovr.zip -d ovr-cli
+          chmod +x ovr-cli/ovr-platform-util
+          echo "$PWD/ovr-cli" >> $GITHUB_PATH
       - name: Upload Meta Quest Build
         uses: RageAgainstThePixel/upload-meta-quest-build@v2
         with:
@@ -92,10 +95,3 @@ jobs:
           ageGroup: 'TEENS_AND_ADULTS'
           draft: false
           releaseNotes: 'Automated build upload'
-          
-      # Step 9: Upload build artifacts
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Unity-Build
-          path: Builds/Android
