--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,54 +2,85 @@ name: Unity VR Android Build
 
 on:
   push:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
   workflow_dispatch:
 
 jobs:
-  # Job A: Prepare caches and free disk space
   prep:
     name: Prepare Environment
     runs-on: ubuntu-latest
+    outputs:
+      build-path: ${{ steps.prepare.outputs.build-path }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
+          fetch-depth: 0   # Full history for versioning
+          lfs: true        # Set to false if not using Git LFS
+
+      - name: Ensure build folder exists
+        id: prepare
+        run: |
+          mkdir -p Builds/Android
+          echo "build-path=Builds/Android" >> $GITHUB_OUTPUT
+
+      - name: Install Meta CLI
+        run: |
+          wget -q https://www.oculus.com/download_app/?id=1076686279105243 -O ovr-platform-util.zip
+          unzip -o ovr-platform-util.zip -d $HOME/ovr-platform-util
+          chmod +x $HOME/ovr-platform-util/ovr-platform-util
+          echo "$HOME/ovr-platform-util" >> $GITHUB_PATH
+
+  build:
+    name: Build Unity VR Project
+    runs-on: ubuntu-latest
+    needs: prep
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
           lfs: true
+
       - name: Cache Unity Library
         uses: actions/cache@v3
         with:
           path: Library
           key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: Library-Android-
+
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
           path: ~/.gradle
           key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: gradle-
+
+      - name: Apply CI manifests
+        run: |
+          echo "Applying CI manifests temporarily..."
+          cp Packages/manifest.ci.json Packages/manifest.json
+          cp Packages/packages-lock.ci.json Packages/packages-lock.json
+          echo "CI manifests applied."
+
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
           tool-cache: true
           android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
 
-  # Job B: Unity build
-  unity-build:
-    name: Build Unity Project
-    runs-on: ubuntu-latest
-    needs: prep
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          lfs: true
-      - name: Ensure build folder exists
-        run: mkdir -p Builds/Android
-      - name: Apply CI manifests
-        run: |
-          cp Packages/manifest.ci.json Packages/manifest.json
-          cp Packages/packages-lock.ci.json Packages/packages-lock.json
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
         env:
@@ -60,34 +91,20 @@ jobs:
         with:
           targetPlatform: Android
           buildMethod: BuildScript.Execute
-          buildsPath: Builds/Android
+          buildsPath: ${{ needs.prep.outputs.build-path }}
           allowDirtyBuild: true
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Unity-Build
-          path: Builds/Android
 
-  # Job C: Meta Quest Upload
-  meta-upload:
-    name: Upload to Meta Quest
+  upload:
+    name: Upload Build
     runs-on: ubuntu-latest
-    needs: unity-build
+    needs: build
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          lfs: true
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: Unity-Build
-          path: Builds/Android
-      - name: Install Meta Quest CLI
-        run: |
-          curl -sSL https://developer.oculus.com/downloads/package/ovr-platform-util/latest/linux/ovr-platform-util-linux.zip -o ovr.zip
-          unzip -q ovr.zip -d ovr-cli
-          chmod +x ovr-cli/ovr-platform-util
-          echo "$PWD/ovr-cli" >> $GITHUB_PATH
+          fetch-depth: 0
+
       - name: Upload Meta Quest Build
         uses: RageAgainstThePixel/upload-meta-quest-build@v2
         with:
@@ -98,3 +115,9 @@ jobs:
           ageGroup: 'TEENS_AND_ADULTS'
           draft: false
           releaseNotes: 'Automated build upload'
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Unity-Build
+          path: Builds/Android
