--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Unity VR Android Build
+name: Unity VR Android Build & Deploy
 
 on:
   push:
@@ -13,43 +13,47 @@ on:
   workflow_dispatch:
 
 jobs:
-  prep:
-    name: Prepare Environment
+  prep-meta:
+    name: Prepare Meta CLI
     runs-on: ubuntu-latest
     outputs:
-      build-path: ${{ steps.prepare.outputs.build-path }}
+      ovr-cli-path: ${{ steps.ovr-path.outputs.path }}
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Setup ovr-platform-util
+        id: ovr-path
+        uses: RageAgainstThePixel/setup-ovr-platform-util@v1
         with:
-          fetch-depth: 0   # Full history for versioning
-          lfs: true        # Set to false if not using Git LFS
-
-      - name: Ensure build folder exists
-        id: prepare
+          version: latest
+      # outputs.path is set by the action
+      - name: Verify CLI
         run: |
-          mkdir -p Builds/Android
-          echo "build-path=Builds/Android" >> $GITHUB_OUTPUT
+          echo "OVR CLI path: $OVR_PLATFORM_UTIL"
+          $OVR_PLATFORM_UTIL --help
 
-      - name: Install Meta CLI
-        run: |
-          wget -q https://www.oculus.com/download_app/?id=1076686279105243 -O ovr-platform-util.zip
-          unzip -o ovr-platform-util.zip -d $HOME/ovr-platform-util
-          chmod +x $HOME/ovr-platform-util/ovr-platform-util
-          echo "$HOME/ovr-platform-util" >> $GITHUB_PATH
+      - name: Upload CLI Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ovr-cli
+          path: $OVR_PLATFORM_UTIL
 
-  build:
-    name: Build Unity VR Project
+  build-android:
+    name: Build Unity Android
     runs-on: ubuntu-latest
-    needs: prep
-
+    needs: prep-meta
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository in Detached HEAD
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           lfs: true
+      - name: Checkout detached HEAD
+        run: |
+          git fetch --depth=1
+          git checkout --detach
 
+      # Cache Library and Gradle
       - name: Cache Unity Library
         uses: actions/cache@v3
         with:
@@ -64,13 +68,17 @@ jobs:
           key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: gradle-
 
+      # Ensure build folder
+      - name: Ensure build folder exists
+        run: mkdir -p Builds/Android
+
+      # Apply CI manifests temporarily
       - name: Apply CI manifests
         run: |
-          echo "Applying CI manifests temporarily..."
           cp Packages/manifest.ci.json Packages/manifest.json
           cp Packages/packages-lock.ci.json Packages/packages-lock.json
-          echo "CI manifests applied."
 
+      # Free disk space before build
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
@@ -81,6 +89,7 @@ jobs:
           large-packages: true
           docker-images: true
 
+      # Build Unity Project
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
         env:
@@ -91,31 +100,29 @@ jobs:
         with:
           targetPlatform: Android
           buildMethod: BuildScript.Execute
-          buildsPath: ${{ needs.prep.outputs.build-path }}
+          buildsPath: Builds/Android
           allowDirtyBuild: true
 
-  upload:
-    name: Upload Build
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Download Meta CLI from prep job
+      - name: Download Meta CLI
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
+          name: ovr-cli
+          path: ovr-cli
 
+      # Upload Meta Quest build
       - name: Upload Meta Quest Build
-        uses: RageAgainstThePixel/upload-meta-quest-build@v2
-        with:
-          appId: ${{ secrets.META_APP_ID }}
-          appSecret: ${{ secrets.META_APP_SECRET }}
-          buildDir: 'Builds/Android'
-          releaseChannel: 'ALPHA'
-          ageGroup: 'TEENS_AND_ADULTS'
-          draft: false
-          releaseNotes: 'Automated build upload'
+        run: |
+          ./ovr-cli/ovr-platform-util upload \
+            --app-id ${{ secrets.META_APP_ID }} \
+            --app-secret ${{ secrets.META_APP_SECRET }} \
+            --build-dir Builds/Android \
+            --channel ALPHA \
+            --notes "Automated CI upload" \
+            --age-group TEENS_AND_ADULTS \
+            --draft false
 
+      # Upload build artifacts
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
