--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup ovr-platform-util
-        id: ovr-path
+        id: ovr
         uses: RageAgainstThePixel/setup-ovr-platform-util@v1
         with:
           version: latest
-      # outputs.path is set by the action
-      - name: Verify CLI
+      - name: Test OVR CLI
         run: |
-          echo "OVR CLI path: $OVR_PLATFORM_UTIL"
-          $OVR_PLATFORM_UTIL --help
+          echo "OVR CLI path: ${{ steps.ovr.outputs.ovr-platform-util }}"
+          ${{ steps.ovr.outputs.ovr-platform-util }} --help
 
       - name: Upload CLI Artifact
         uses: actions/upload-artifact@v4
