--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,12 @@ jobs:
       - name: Ensure build folder
         run: mkdir -p Builds/Android
 
-      # Free disk space
+  build:
+    name: Build Unity Android
+    runs-on: ubuntu-latest
+    needs: prep
+    steps:
+      # Free disk space before build
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
@@ -53,11 +58,6 @@ jobs:
           large-packages: true
           docker-images: true
 
-  build:
-    name: Build Unity Android
-    runs-on: ubuntu-latest
-    needs: prep
-    steps:
       - name: Checkout Repository in Detached HEAD
         uses: actions/checkout@v4
         with:
