--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,15 @@ jobs:
           restore-keys: Library-Android-
 
       # Cache Gradle
-      - name: Cache Gradle
-        uses: actions/cache@v3
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: gradle-
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
       # Ensure build folder exists
       - name: Ensure build folder
@@ -49,17 +50,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: prep
     steps:
-      # Free disk space before build
-      - name: Free disk space
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: true
-
       - name: Checkout Repository in Detached HEAD
         uses: actions/checkout@v4
         with:
@@ -74,7 +64,17 @@ jobs:
         run: |
           cp Packages/manifest.ci.json Packages/manifest.json
           cp Packages/packages-lock.ci.json Packages/packages-lock.json
-
+          
+      # Free disk space before build
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
       # Build Unity Project
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
@@ -111,6 +111,10 @@ jobs:
           name: Unity-Build
           path: Builds/Android
 
+      # Add this step to set up the ovr-platform-util
+      - name: Setup ovr-platform-util
+        uses: RageAgainstThePixel/setup-ovr-platform-util@v1
+
       # Upload to Meta Quest
       - name: Upload Meta Quest Build
         uses: RageAgainstThePixel/upload-meta-quest-build@v2
@@ -119,6 +123,5 @@ jobs:
           appSecret: ${{ secrets.META_APP_SECRET }}
           buildDir: 'Builds/Android'
           releaseChannel: 'ALPHA'
-          ageGroup: 'TEENS_AND_ADULTS'
-          draft: false
+          draft: true
           releaseNotes: 'Automated CI upload'
