--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  prep:
-    name: Prep Environment
+  build:
+    name: Build Unity Android
     runs-on: ubuntu-latest
-    outputs:
-      prep-done: true
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout Repository in Detached HEAD
         uses: actions/checkout@v4
+        with:
+          lfs: true
+
+      - name: Checkout detached HEAD
+        run: |
+          git fetch --depth=1
+          git checkout --detach
 
       # Cache Unity Library
       - name: Cache Unity Library
@@ -30,7 +36,7 @@ jobs:
           key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: Library-Android-
 
-      # Cache Gradle
+      # Cache Gradle packages
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -44,20 +50,6 @@ jobs:
       # Ensure build folder exists
       - name: Ensure build folder
         run: mkdir -p Builds/Android
-
-  build:
-    name: Build Unity Android
-    runs-on: ubuntu-latest
-    needs: prep
-    steps:
-      - name: Checkout Repository in Detached HEAD
-        uses: actions/checkout@v4
-        with:
-          lfs: true
-      - name: Checkout detached HEAD
-        run: |
-          git fetch --depth=1
-          git checkout --detach
 
       # Apply CI manifests temporarily
       - name: Apply CI manifests
@@ -75,6 +67,7 @@ jobs:
           haskell: true
           large-packages: true
           docker-images: true
+
       # Build Unity Project
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
@@ -111,7 +104,7 @@ jobs:
           name: Unity-Build
           path: Builds/Android
 
-      # Add this step to set up the ovr-platform-util
+      # Setup ovr-platform-util
       - name: Setup ovr-platform-util
         uses: RageAgainstThePixel/setup-ovr-platform-util@v1
 
