--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -17,10 +17,11 @@ jobs:
       # Step 2: Setup Unity (headless)
       - name: Setup Unity
         uses: game-ci/unity-builder@v4
-        with:
-          unityVersion: 2022.3.51f1  # replace with your Unity version
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        
       # Step 3: Run version bump script
       - name: Run VersionBump Script
         run: |
