--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - "*"   # Trigger on push to any branch
-
+permissions:
+  contents: write
 jobs:
   version-bump:
     name: Bump Unity Project Version
