--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -46,8 +46,8 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           projectPath: .
-          executeMethod: MyVersionManager.EnsureVersion
-          buildTarget: StandaloneWindows64
+          buildMethod: MyVersionManager.EnsureVersion
+          targetPlatform: StandaloneWindows64
           unityVersion: 2022.3.51f1
           allowDirtyBuild: true
       # Step 3: Run version bump script
