--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -46,8 +46,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           buildMethod: MyVersionManager.EnsureVersion
-          targetPlatform: StandaloneWindows64
-          unityVersion: 2022.3.51f1
+          targetPlatform: Android
           allowDirtyBuild: true
       # Step 3: Run version bump script
       #- name: Run VersionBump Script
