--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -2,8 +2,7 @@ name: Version Bump
 
 on:
   push:
-    branches:
-      - "*"   # Trigger on push to any branch
+  
 permissions:
   contents: write
 jobs:
@@ -45,7 +44,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          buildMethod: MyVersionManager.EnsureVersion
+          buildMethod: MyVersionManager.PerformVersionBump
           targetPlatform: Android
           allowDirtyBuild: true
       # Step 3: Run version bump script
