--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,3 +122,14 @@ jobs:
           ageGroup: 'MIXED_AGES'
           draft: true
           releaseNotes: 'Automated CI upload'
+          
+      - name: Commit version changes
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add ProjectSettings/ProjectSettings.asset
+          git add Packages/manifest.json
+          git commit -m "Version bump via CI on branch $GITHUB_REF" || echo "No changes to commit"
+          git push origin HEAD:$GITHUB_REF
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
