--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,17 @@
-name: Unity VR Android Build & Deploy
+name: Unity VR Android Build
 
 on:
+  push:
+    branches:
+      - main
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
       - main
       - develop
   workflow_dispatch:
-  
+
 permissions:
   contents: write
 
@@ -28,7 +32,6 @@ jobs:
           path: .git/lfs/objects
           key: ${{ runner.os }}-lfs-${{ hashFiles('**/Assets/**') }}
 
-      # Cache the Unity Library folder (the most important cache)
       - name: Cache Unity Library
         uses: actions/cache@v4
         with:
@@ -37,7 +40,6 @@ jobs:
           restore-keys: |
             Library-Android-
 
-      # Cache Gradle dependencies and build cache
       - name: Cache Gradle packages and build cache
         uses: actions/cache@v4
         with:
@@ -49,17 +51,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Ensure build folder exists
       - name: Ensure build folder
         run: mkdir -p Builds/Android
 
-      # Apply CI manifests temporarily
       - name: Apply CI manifests
         run: |
           cp Packages/manifest.ci.json Packages/manifest.json
           cp Packages/packages-lock.ci.json Packages/packages-lock.json
-          
-      # Free disk space before build
+
       - name: Free disk space
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
@@ -70,7 +69,6 @@ jobs:
           large-packages: true
           docker-images: true
 
-      # Build Unity Project
       - name: Build Unity Project
         uses: game-ci/unity-builder@v4
         env:
@@ -84,51 +82,19 @@ jobs:
           buildsPath: Builds/Android
           allowDirtyBuild: true
 
-      # Upload build artifacts for next job
+      - name: Commit version changes
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -- Packages/manifest.json Packages/packages-lock.json
+          git add ProjectSettings/ProjectSettings.asset Packages/manifest.json Packages/packages-lock.json
+          git commit -m "Version bump and revert CI manifest swap on branch $GITHUB_REF" || echo "No changes to commit"
+          git push origin HEAD:$GITHUB_REF
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Unity-Build
           path: Builds/Android
-
-  deploy-meta:
-    name: Upload to Meta Quest
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      # Download the build artifacts
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: Unity-Build
-          path: Builds/Android
-
-      # Setup ovr-platform-util
-      - name: Setup ovr-platform-util
-        uses: RageAgainstThePixel/setup-ovr-platform-util@v1
-
-      # Upload to Meta Quest
-      - name: Upload Meta Quest Build
-        uses: RageAgainstThePixel/upload-meta-quest-build@v2
-        with:
-          appId: ${{ secrets.META_APP_ID }}
-          appSecret: ${{ secrets.META_APP_SECRET }}
-          buildDir: 'Builds/Android'
-          releaseChannel: 'ALPHA'
-          ageGroup: 'MIXED_AGES'
-          draft: true
-          releaseNotes: 'Automated CI upload'
-          
-      - name: Commit version changes
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add ProjectSettings/ProjectSettings.asset
-          git add Packages/manifest.json
-          git commit -m "Version bump via CI on branch $GITHUB_REF" || echo "No changes to commit"
-          git push origin HEAD:$GITHUB_REF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
