--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: Unity VR Android Build
 
 on:
-  push:
-    branches:
-      - main
-      - develop
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
@@ -83,6 +79,7 @@ jobs:
           allowDirtyBuild: true
 
       - name: Commit version changes
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
