--- a/.github/workflows/meta-upload.yml
+++ b/.github/workflows/meta-upload.yml
@@ -1,18 +1,17 @@
 name: Upload to Meta Quest
 
 on:
-  workflow_run:
-    workflows: ["Unity VR Android Build"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
+      - develop
 
 permissions:
   contents: write
 
 jobs:
   deploy-meta:
-    if: ${{ github.event.workflow_run.conclusion == 'success' &&
-           (github.event.workflow_run.head_branch == 'develop' || github.event.workflow_run.head_branch == 'main') }}
+    needs: Unity VR Android Build
     name: Upload to Meta Quest
     runs-on: ubuntu-latest
 
